test/spec_vectors/simd_i16x8_sat_arith/ok/module_17.wat
(module (func (export "sat-add_s-sub_s") (param v128 v128 v128) (result v128) (i16x8.add_sat_s (i16x8.sub_sat_s (local.get 0) (local.get 1)) (local.get 2))) (func (export "sat-add_s-sub_u") (param v128 v128 v128) (result v128) (i16x8.add_sat_s (i16x8.sub_sat_u (local.get 0) (local.get 1)) (local.get 2))) (func (export "sat-add_u-sub_s") (param v128 v128 v128) (result v128) (i16x8.add_sat_u (i16x8.sub_sat_s (local.get 0) (local.get 1)) (local.get 2))) (func (export "sat-add_u-sub_u") (param v128 v128 v128) (result v128) (i16x8.add_sat_u (i16x8.sub_sat_u (local.get 0) (local.get 1)) (local.get 2))) (func (export "sat-add_s-neg") (param v128 v128) (result v128) (i16x8.add_sat_s (i16x8.neg (local.get 0)) (local.get 1))) (func (export "sat-add_u-neg") (param v128 v128) (result v128) (i16x8.add_sat_u (i16x8.neg (local.get 0)) (local.get 1))) (func (export "sat-sub_s-neg") (param v128 v128) (result v128) (i16x8.sub_sat_s (i16x8.neg (local.get 0)) (local.get 1))) (func (export "sat-sub_u-neg") (param v128 v128) (result v128) (i16x8.sub_sat_u (i16x8.neg (local.get 0)) (local.get 1))))