test/spec_vectors/simd_i16x8_sat_arith/fail/module_9.wat
(module (func $i16x8.add_sat_s-1st-arg-empty (result v128) (i16x8.add_sat_s (v128.const i16x8 0 0 0 0 0 0 0 0))))